componentes/rotas - concluído

--- a/src/app/site/home/home.component.html
+++ b/src/app/site/home/home.component.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Finans - Finanças Pessoais</title>
-  </head>
-    <body>
-        <app-navbar></app-navbar>
-        <app-content></app-content>
-        <app-footer></app-footer>
-  </body>
-</html>
+<router-outlet></router-outlet>
