--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Inicio cabeçalho -->
 <header>
-  <nav class="navbar navbar-expand-sm navbar-light bg-warning">
-      <div class="container">
+    <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <div class="container">
           <a href="#" class="navbar-brand">
               <img src="../../assets/img/logo.png" width="142">
           </a>
@@ -10,30 +10,27 @@
               <span class="navbar-toggler-icon"></span>
           </button>
 
-          <!-- Referenciando o id acima, para quando houver a redução de tela aparecer o hamburguer
-              e ao clicar aparecer os links -->
-          <div class="collapse navbar-collapse" id="nav-principal" style="margin-left:50%;">
+            <!-- Referenciando o id acima, para quando houver a redução de tela aparecer o hamburguer e ao clicar aparecer os links -->
+            <div class="collapse navbar-collapse" id="nav-principal" style="margin-left:50%;">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                      <a href="#" class="nav-link">Home</a>  
+                      <a routerLink="/" class="nav-link">Home</a>  
                   </li>
                   <li class="nav-item">
-                      <a href="#" class="nav-link">Recursos</a>  
+                      <a routerLink="/recursos" class="nav-link">Recursos</a>  
                   </li>
                   <li class="nav-item">
-                      <a href="#" class="nav-link">Beneficios</a>  
+                      <a routerLink="/beneficios" class="nav-link">Beneficios</a>  
                   </li>
                   <li class="nav-item">
-                      <a href="#" class="nav-link">Preços</a>  
+                      <a routerLink="/preco" class="nav-link">Preços</a>  
                   </li>
                   <li class="nav-item ml-4">
-                      <a href="#" class="btn btn-outline-light ml-auto" style="margin-left:20px;">
+                      <a routerLink="#" class="btn btn-outline-light ml-auto" style="margin-left:20px;">
                           Entrar</a>  
                   </li>
               </ul>
-              
-          </div>
-          
-      </div>
-  </nav>
-</header><!-- Fim cabeçalho -->
+            </div>
+        </div>
+    </nav>
+</header>
