Alteracao nav e footer

--- a/src/app/site/benefits/benefits.component.html
+++ b/src/app/site/benefits/benefits.component.html
@@ -1,1 +1,21 @@
-<p>benefits works!</p>
+<section> <!-- Inicio seção benefits -->
+    <div class="container benefits">
+        <div class="row">
+            <div class="">
+                <p>
+                    exemplo beneficio
+                </p>
+                <p>
+                    exemplo beneficio
+                </p>
+                <p>
+                    exemplo beneficio
+                </p>
+                <p>
+                    exemplo beneficio
+                </p>
+               
+            </div>
+        </div>
+    </div>
+</section>
