--- a/src/app/site/home/content/content.component.html
+++ b/src/app/site/home/content/content.component.html
@@ -19,14 +19,14 @@
                       </div>
                   </form>
 
-                  <p>Disponível para
+                  <!-- <p>Disponível para
                       <a href="" class="btn btn-outline-light">
                           <i class="fas fa-robot fa-lg"></i>
                       </a>
                       <a href="" class="btn btn-outline-light">
                           <i class="fab fa-apple fa-lg"></i>
                       </a>
-                  </p>
+                  </p> -->
               </div>
           </div>
           <!-- d-none d-md-block   quando a tela fica >= md a imagem é mostrada-->
