--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -2,35 +2,42 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
-          <a href="#" class="navbar-brand">
-              <img src="../../assets/img/logo.png" width="142">
-          </a>
-
-          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-
+            <a href="#" class="navbar-brand">
+                <img src="../../assets/img/logo.png" width="142">
+            </a>
+            
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
             <!-- Referenciando o id acima, para quando houver a redução de tela aparecer o hamburguer e ao clicar aparecer os links -->
-            <div class="collapse navbar-collapse" id="nav-principal" style="margin-left:50%;">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a routerLink="/" class="nav-link">Home</a>  
-                  </li>
-                  <li class="nav-item">
-                      <a routerLink="/recursos" class="nav-link">Recursos</a>  
-                  </li>
-                  <li class="nav-item">
-                      <a routerLink="/beneficios" class="nav-link">Beneficios</a>  
-                  </li>
-                  <li class="nav-item">
-                      <a routerLink="/preco" class="nav-link">Preços</a>  
-                  </li>
-                  <li class="nav-item ml-4">
-                      <a routerLink="#" class="btn btn-outline-light ml-auto" style="margin-left:20px;">
-                          Entrar</a>  
-                  </li>
-              </ul>
+            <div class="collapse navbar-collapse" id="nav-principal">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a routerLink="/" class="nav-link">Home</a>  
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="/recursos" class="nav-link">Recursos</a>  
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="/beneficios" class="nav-link">Beneficios</a>  
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="/preco" class="nav-link">Preços</a>  
+                    </li>        
+                </ul>  
+             </div>
+
+            <div class="btn-item-menu">
+                    <a routerLink="#" class="btn btn-primary btn-lg">
+                        Criar minha conta
+                    </a>  
+        
+                    <a routerLink="#" class="btn btn-outline-light btn-lg" style="margin-left:5px;">
+                         Entrar
+                    </a>  
             </div>
         </div>
     </nav>
 </header>
+        
