criacao da estrutura stepper para abertura de conta de usuario

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -29,11 +29,11 @@
              </div>
 
             <div class="btn-item-menu">
-                    <a routerLink="#" class="btn btn-primary btn-lg">
+                    <a routerLink="/user-register" class="btn btn-primary btn-lg">
                         Criar minha conta
                     </a>  
         
-                    <a routerLink="#" class="btn btn-outline-light btn-lg" style="margin-left:5px;">
+                    <a routerLink="/login" class="btn btn-outline-light btn-lg" style="margin-left:5px;">
                          Entrar
                     </a>  
             </div>
