--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-primary text-center text-white">
+<footer class="bg-dark text-center text-white">
     <!-- Grid container -->
     <div class="container p-4">
   
