background de imagem

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -23,7 +23,7 @@
                       <a routerLink="/beneficios" class="nav-link">Beneficios</a>  
                   </li>
                   <li class="nav-item">
-                      <a routerLink="/preco" class="nav-link">Preços</a>  
+                      <a routerLink="/preco" class="nav-link">Investimentos</a>  
                   </li>
                   <li class="nav-item ml-4">
                       <a routerLink="#" class="btn btn-outline-light ml-auto" style="margin-left:20px;">
