--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -14,17 +14,20 @@
             <div class="collapse navbar-collapse" id="nav-principal" style="margin-left:50%;">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                      <a routerLink="/" class="nav-link">Home</a>  
+                      <a href="#home" class="nav-link">Home</a>  
                   </li>
                   <li class="nav-item">
-                      <a routerLink="/recursos" class="nav-link">Recursos</a>  
+                      <a href="#recursos" class="nav-link">Recursos</a>  
                   </li>
                   <li class="nav-item">
-                      <a routerLink="/beneficios" class="nav-link">Beneficios</a>  
+                      <a href="#beneficios" class="nav-link">Beneficios</a>  
                   </li>
                   <li class="nav-item">
-                      <a routerLink="/preco" class="nav-link">Investimentos</a>  
+                      <a href="#investimentos" class="nav-link">Investimentos</a>  
                   </li>
+                  <li class="nav-item">
+                    <a href="#info" class="nav-link">Informação</a>  
+                </li>
                   <li class="nav-item ml-4">
                       <a routerLink="#" class="btn btn-outline-light ml-auto" style="margin-left:20px;">
                           Entrar</a>  
