alterações na barra de navegação

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Inicio cabeçalho -->
-<header>
+<header id="header">
     <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
           <a href="#" class="navbar-brand">
