--- a/src/app/site/home/content/content.component.html
+++ b/src/app/site/home/content/content.component.html
@@ -41,7 +41,7 @@
 <section class="caixa" id="recursos"><!-- Inicio seção saiba / Recursos -->
     <div class="container">
         <div class="row">
-            <div class="col-md-6 d-flex" [ngsRevealSet]="{reset:true}" [ngsInterval]="50" [ngsSelector]="'.scroll'">
+            <div class="col-md-6 d-flex" [ngsRevealSet]="{reset:false}" [ngsInterval]="50" [ngsSelector]="'.scroll'">
                 <div class="align-self-center scroll">
                     <h2>Recursos</h2>
                     <p>
@@ -82,7 +82,7 @@
 
 <section class="caixa" id="investimentos"><!-- Inicio seção juros / investimentos -->
     <div class="container">
-        <div class="row" [ngsRevealSet]="{ reset:true}" [ngsInterval]="50" [ngsSelector]="'.scroll'">
+        <div class="row" [ngsRevealSet]="{ reset:false}" [ngsInterval]="50" [ngsSelector]="'.scroll'">
             <div class="card col-md cardInvest scroll">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
